--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -78,7 +78,7 @@
 
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#inicio">Inicio</a>
+        <a href="/">Inicio</a>
         <a href="/ventas">Ventas</a>
         <a href="/inventario">Inventario</a>
         <a href="/caja_diaria">Caja</a>
