--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -160,6 +160,8 @@
         <div class="submenu" id="configSubmenu">
             <a href="/configuracion">Crear usuarios</a>
             <a href="/crear-comercio">Crear comercio</a>
+            <a href="/proveedores">Crear proveedor</a>
+            <a href="/pedidos">Crear pedidos</a>
         </div>
         <a href="/login">Logout</a>
     </div>
