--- a/views/proveedores.ejs
+++ b/views/proveedores.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -108,7 +107,7 @@
             // Función para cargar proveedores en la tabla
             function loadProviders() {
                 $.ajax({
-                    url: '/get-providers',
+                    url: '/providers/get-providers',
                     method: 'GET',
                     success: function(data) {
                         let providers = data.providers;
@@ -148,7 +147,7 @@
                     contact_name: $('#contactName').val()
                 };
                 $.ajax({
-                    url: '/add-provider',
+                    url: '/providers/add-provider',
                     method: 'POST',
                     data: providerData,
                     success: function(response) {
@@ -163,7 +162,7 @@
                 let providerId = $(this).data('id');
                 
                 // Obtener la información del proveedor y rellenar el formulario del modal
-                $.get(`/get-provider/${providerId}`, function(provider) {
+                $.get(`/providers/get-provider/${providerId}`, function(provider) {
                     $('#editProviderId').val(provider.provider_id);
                     $('#editCompanyName').val(provider.company_name);
                     $('#editCuit').val(provider.cuit);
@@ -187,7 +186,7 @@
                 };
 
                 $.ajax({
-                    url: `/edit-provider/${providerId}`,
+                    url: `/providers/edit-provider/${providerId}`,
                     type: 'PUT',
                     data: providerData,
                     success: function(response) {
@@ -206,7 +205,7 @@
             $('#providerTableBody').on('click', '.delete-btn', function() {
                 let providerId = $(this).data('id');
                 $.ajax({
-                    url: `/delete-provider/${providerId}`,
+                    url: `/providers/delete-provider/${providerId}`,
                     method: 'DELETE',
                     success: function(response) {
                         loadProviders();
