--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -163,6 +163,7 @@
             <a href="/crear-comercio">Crear comercio</a>
             <a href="/proveedores">Crear proveedor</a>
             <a href="/pedidos">Crear pedidos</a>
+            <a href="/generadordeprecios">Generador de precios</a>
         </div>
         <a href="/login">Logout</a>
     </div>
