--- a/views/inventario.ejs
+++ b/views/inventario.ejs
@@ -186,6 +186,7 @@
           </tr>
         </thead>
         <tbody></tbody>
+        
       </table>
     </div>
 
@@ -406,6 +407,7 @@
           "CALDOS SOPAS Y PURE",
           "REPOSTERIA Y POSTRES",
           "SNACKS",
+          "GOLOSINAS",
         ],
         "DESAYUNO Y MERIENDA": [
           "GALLETITAS BISCOCHITOS Y TOSTADAS",
@@ -827,5 +829,6 @@ document.getElementById("applyFilters").addEventListener("click", function () {
 });
 
     </script>
+    
   </body>
 </html>
